--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 <p> <span> country : </span> karachi,pakistan </p>
             </div>
         </div>
-        <a href="D:\BURHAN\Protfoilo\MBApersonal porfolio/BurhanNewResume.pdf" class="btn01 btn-1">download CV<i Class="fas fa-download"></i></a>
+        <a href="file:///D:/BURHAN/Hosting/MyPortfoiloMbA.github.io/BurhanNewResume.pdf" class="btn01 btn-1">download CV<i Class="fas fa-download"></i></a>
         <!-- <a href="D:\BURHAN\Protfoilo\personal porfolio/BurhanNewResume.pdf" class="btn">download CV<i Class="fas fa-download"></i></a> -->
         <a href="https://www.linkedin.com/in/burhan-abdal-89438b215" class="btn01 btn-1">hire me</a>
 
